syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message CGHeroCommentProto {
  optional int32 msgType=1 [default = 24013];//协议类型  
  optional int32 heroCode=2;//英雄标识
  optional string comment=3;//评论
   optional int32 type=4;//评论类型  1:英雄  2:宠物
}